# compress-me

./: CMakeLists.txt  README.md
src/: compress.c  compress.h  decompress.c  decompress.h  main.c
